--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tu descripción aquí",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",  
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,8 +13,15 @@
   "author": "Tu nombre",
   "license": "ISC",
   "dependencies": {
-    "next": "^13.4.0", 
-    "react": "^18.2.0", 
-    "react-dom": "^18.2.0" 
+    "@vercel/postgres": "^0.10.0",
+    "next": "^14.2.15",
+    "next-auth": "5.0.0-beta.22",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "use-debounce": "^10.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.14"
   }
 }
